--- a/public/admin/styles.css
+++ b/public/admin/styles.css
@@ -24,7 +24,8 @@ body, html {
     color: white;
     text-align: center;
     margin-bottom: 30px;
-    font-size: 22px;
+    font-size: 2rem;
+    margin-top: 1rem;
     font-weight: bold;
     letter-spacing: 1px;
 }
@@ -116,7 +117,6 @@ header {
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
 }
 
 table, th, td {
@@ -126,6 +126,11 @@ table, th, td {
 th, td {
     padding: 12px;
     text-align: left;
+    text-transform: capitalize;
+}
+
+.td-email{
+    text-transform: none;
 }
 
 th {
