--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -66,19 +66,34 @@ body, html {
 }
 
 header {
-    font-size: 24px;
+    font-size: 2rem;
+    margin-top: 1rem;
     margin-bottom: 20px;
     color: #34495e;
+    font-weight: 600;
+}
+
+.header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.create-btn{
+    font-size: 1.2rem;
+    padding: 0.7rem 1.5rem;
 }
 
 /* Dashboard Styles */
 .dashboard {
     display: flex;
     justify-content: space-around;
+    gap: 1rem;
 }
 
 .card {
-    width: 200px;
+    width: 100%;
     background-color: #3498db;
     color: white;
     padding: 20px;
@@ -88,12 +103,13 @@ header {
 
 .card h3 {
     margin: 0;
-    font-size: 20px;
+    font-size: 1.6rem;
 }
 
 .card p {
-    font-size: 26px;
+    font-size: 2.4rem;
     margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 /* Manage Users & Roles Table */
